--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.4",
     "bcryptjs": "^2.4.3",
+    "cache-manager": "^2.10.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.10.1",
     "dotenv": "^8.1.0",
